--- a/machine-learning/C2_W4_Decision_Tree_with_Markdown/C2_W4_Decision_Tree_with_Markdown.ipynb
+++ b/machine-learning/C2_W4_Decision_Tree_with_Markdown/C2_W4_Decision_Tree_with_Markdown.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1048,7 +1048,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -1062,7 +1062,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
